--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   http: ^1.2.0
+  flutter_native_splash: ^2.3.9
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
